Fix header active tab spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -917,7 +917,7 @@ li {
 }
 @media (min-width: 1440px) {
   .nav-list-item__link {
-    line-height: 5rem;
+    line-height: 5.0625rem;
     border-top: 4px solid transparent;
   }
 }
